[MB-27158] Throw exception if lcb initialization fails

* Till now, the errors related to lcb initialization were just
  logged. This made it difficult to detect the case when query node
  was removed etc.
* We're now throwing an exception if initialization of lcb fails.

Change-Id: Ie72a474b4a8e99daf810790d63cc508c8b6d315e
Reviewed-on: http://review.couchbase.org/86764
Reviewed-by: Abhishek Singh <abhishek@couchbase.com>
Tested-by: Gautham B A <gautham.bangalore@gmail.com>