v8_consumer/include/function_templates.h
@@ -47,5 +47,7 @@ void ConsoleLog(const v8::FunctionCallbackInfo<v8::Value> &args);
 
 void CreateCronTimer(const v8::FunctionCallbackInfo<v8::Value> &args);
 void CreateDocTimer(const v8::FunctionCallbackInfo<v8::Value> &args);
+void HandleDocTimerFailure(v8::Isolate *isolate, lcb_t instance,
+                           lcb_error_t error);
 
 #endif
